--- a/products/2-key-amusing-keypad/checkout/index.html
+++ b/products/2-key-amusing-keypad/checkout/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>Antecer Review Form</title>
+    <title>Antecer Buyers Form</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <meta name="author" content="Antecer">
@@ -87,8 +87,7 @@
     <div id="form_container" class="container animated2 fadeIn" style="align-items: center; justify-content: center; text-align: left; margin-top: 100px; display: none">
         <div class="row">
             <div class="col-md-12 animated2 fadeIn" style="display:block;">
-                <h2>Antecer's <a id="gradient">AmusingKeypad</a> Pro Review</h2>
-                <p style="margin-left: 10px;">Your opinion is very precious to us, so every opinion counts.</p>
+                <h2>Antecer's <a id="gradient">AmusingKeypad</a> Pro Buying Form</h2>
                 <p style="margin-left: 10px;">* = Required</p>
             </div>
         </div>
@@ -122,7 +121,7 @@
                             <td><input type="hidden" name="on2" value="Buyer information"></td>
                         </tr>
                         <tr>
-                            <td><input type="hidden" name="os2" maxlength="200" value="LOKDOFDFJJSDJSFNSFNJSDJKNSDJKNSJKDSJKDJNK"></td>
+                            <td><input id="valuebuyersinformation" type="hidden" name="os2" maxlength="400" value=""></td>
                         </tr>
                     </table>
                     <input type="hidden" name="currency_code" value="USD">
@@ -142,7 +141,7 @@
 
                     <div class="form-group">
                         <label for="inputAddress">Address*</label>
-                        <input id="valueadress" type="text" class="form-control" placeholder="1234 Main St" required>
+                        <input id="valueaddress" type="text" class="form-control" placeholder="1234 Main St" required>
                     </div>
 
                     <div class="form-row">
