--- a/products/2-key-amusing-keypad/checkout/index.html
+++ b/products/2-key-amusing-keypad/checkout/index.html
@@ -117,12 +117,63 @@
                                 </select>
                             </td>
                         </tr>
+
                         <tr>
-                            <td><input type="hidden" name="on2" value="Buyer information"></td>
+                            <td><input type="hidden" name="on2" value="First Name"></td>
                         </tr>
                         <tr>
-                            <td><input id="valuebuyersinformation" type="hidden" name="os2" maxlength="400" value=""></td>
+                            <td><input id="ppfirstname" type="hidden" name="os2" maxlength="100" value=""></td>
                         </tr>
+
+                        <tr>
+                            <td><input type="hidden" name="on3" value="Last Name"></td>
+                        </tr>
+                        <tr>
+                            <td><input id="pplastname" type="hidden" name="os3" maxlength="100" value=""></td>
+                        </tr>
+
+                        <tr>
+                            <td><input type="hidden" name="on4" value="Address"></td>
+                        </tr>
+                        <tr>
+                            <td><input id="ppaddress" type="hidden" name="os4" maxlength="100" value=""></td>
+                        </tr>
+
+                        <tr>
+                            <td><input type="hidden" name="on5" value="City"></td>
+                        </tr>
+                        <tr>
+                            <td><input id="ppcity" type="hidden" name="os5" maxlength="100" value=""></td>
+                        </tr>
+
+                        <tr>
+                            <td><input type="hidden" name="on6" value="State"></td>
+                        </tr>
+                        <tr>
+                            <td><input id="ppstate" type="hidden" name="os6" maxlength="100" value=""></td>
+                        </tr>
+
+                        <tr>
+                            <td><input type="hidden" name="on7" value="Zipcode"></td>
+                        </tr>
+                        <tr>
+                            <td><input id="ppzip" type="hidden" name="os7" maxlength="100" value=""></td>
+                        </tr>
+
+                        <tr>
+                            <td><input type="hidden" name="on8" value="Email"></td>
+                        </tr>
+                        <tr>
+                            <td><input id="ppemail" type="hidden" name="os8" maxlength="100" value=""></td>
+                        </tr>
+
+                        <tr>
+                            <td><input type="hidden" name="on9" value="Phone Number"></td>
+                        </tr>
+                        <tr>
+                            <td><input id="ppphone" type="hidden" name="os9" maxlength="100" value=""></td>
+                        </tr>
+
                     </table>
                     <input type="hidden" name="currency_code" value="USD">
                 </form>
