--- a/customization/test.html
+++ b/customization/test.html
@@ -38,80 +38,84 @@
 		<em>Opera</em>
 	</div>
 	<script>
-		// 图片裁剪
-		function CropNode(selectNode, cropX, cropY, cropW, cropH, cropR) {
-			// 获取图片尺寸
-			let zoomVal = selectNode.style.transform ? selectNode.style.transform.match(/scale\(([^\)]*)/)[1] : 1;
-			let nodeX = selectNode.getBoundingClientRect().left;
-			let nodeY = selectNode.getBoundingClientRect().top;
-			let nodeW = selectNode.getBoundingClientRect().width;
-			let nodeH = selectNode.getBoundingClientRect().height;
-			// 获取裁剪尺寸
-			let cutLine = document.querySelector('svg.keypadpro');
-			let cutX = cutLine.getBoundingClientRect().left;
-			let cutY = cutLine.getBoundingClientRect().top;
-			let cutW = cutLine.getBoundingClientRect().width;
-			let cutH = cutLine.getBoundingClientRect().height;
-			// 计算裁剪路径
-			let clipLeft = cutX - nodeX;
-			let clipTop = cutY - nodeY;
-			let clipRight = nodeW - clipLeft - cutW;
-			let clipBottom = nodeH - clipTop - cutH;
-			clipLeft /= zoomVal;
-			clipTop /= zoomVal;
-			clipRight /= zoomVal;
-			clipBottom /= zoomVal;
-			// 设置裁剪样式
-			selectNode.style.clipPath = `inset(${clipTop}px ${clipRight}px ${clipBottom}px ${clipLeft}px round ${cropR})`;
-		}
-		// 打印对话框弹出事件
-		document.body.onbeforeprint = () => {
-			CropNode(document.querySelector('#cropImg'), '0mm', '0mm', '50mm', '50mm', '2.5mm');
-		}
-		// 打印对话框关闭事件
-		document.body.onafterprint = () => {
-			document.querySelector('#cropImg').style.clipPath = 'initial';
-		}
-		// 图片拖动与缩放功能
-		function DragNode(itemNode) {
-			let params = {
-				zoomVal: 1,
-				left: itemNode.offsetLeft,
-				top: itemNode.offsetTop,
-				currentX: 0,
-				currentY: 0,
-				flag: false,
-			};
-			// 鼠标滚轮事件
-			itemNode.onmousewheel = (event) => {
-				if (params.zoomVal < 0.1 && event.deltaY > 0) return;
-				if (params.zoomVal > 2 && event.deltaY < 0) return;
-				params.zoomVal += event.deltaY > 0 ? -0.01 : +0.01;
-				itemNode.style.transform = `scale(${params.zoomVal})`;
-			}
-			// 鼠标在图片上按下事件
-			itemNode.onmousedown = (event) => {
-				params.flag = true;
-				params.currentX = event.clientX;
-				params.currentY = event.clientY;
-			}
-			// 鼠标按键释放全局事件
-			document.onmouseup = () => {
-				params.flag = false;
-				params.left = itemNode.offsetLeft;
-				params.top = itemNode.offsetTop;
-			}
-			// 鼠标指针移动全局事件
-			document.onmousemove = (event) => {
-				if (params.flag) {
-					let offsetX = event.clientX - params.currentX;
-					let offsetY = event.clientY - params.currentY;
-					itemNode.style.left = (params.left + offsetX) + "px";
-					itemNode.style.top = (params.top + offsetY) + "px";
-					event.preventDefault();	// 取消鼠标移动事件的默认操作
-				}
-			}
-		}
+        function CropNode(selectNode, cropX, cropY, cropW, cropH, cropR) {
+            // 获取图片尺寸
+            let zoomVal = selectNode.style.transform ? selectNode.style.transform.match(/scale\(([^\)]*)/)[1] : 1;
+            let nodeX = selectNode.getBoundingClientRect().left;
+            let nodeY = selectNode.getBoundingClientRect().top;
+            let nodeW = selectNode.getBoundingClientRect().width;
+            let nodeH = selectNode.getBoundingClientRect().height;
+            // 获取裁剪尺寸
+            let cutLine = document.querySelector('svg.keypadpro');
+            let cutX = cutLine.getBoundingClientRect().left;
+            let cutY = cutLine.getBoundingClientRect().top;
+            let cutW = cutLine.getBoundingClientRect().width;
+            let cutH = cutLine.getBoundingClientRect().height;
+            // 计算裁剪路径
+            let clipLeft = cutX - nodeX;
+            let clipTop = cutY - nodeY;
+            let clipRight = nodeW - clipLeft - cutW;
+            let clipBottom = nodeH - clipTop - cutH;
+            clipLeft /= zoomVal;
+            clipTop /= zoomVal;
+            clipRight /= zoomVal;
+            clipBottom /= zoomVal;
+            // 设置裁剪样式
+            selectNode.style.clipPath = `inset(${clipTop}px ${clipRight}px ${clipBottom}px ${clipLeft}px round ${cropR})`;
+        }
+        // 打印对话框弹出事件
+        document.body.onbeforeprint = () => {
+            CropNode(document.querySelector('#cropImg'), '0mm', '0mm', '50mm', '50mm', '2.5mm');
+        }
+        // 打印对话框关闭事件
+        document.body.onafterprint = () => {
+            document.querySelector('#cropImg').style.clipPath = 'initial';
+        }
+        function DragNode(itemNode) {
+
+            let params = {
+                zoomVal: 1,
+                left: itemNode.offsetLeft,
+                top: itemNode.offsetTop,
+                currentX: 0,
+                currentY: 0,
+                flag: false,
+            };
+
+
+            // 鼠标滚轮事件
+            itemNode.onwheel = (event) => {
+                if (params.zoomVal < 0.1 && event.deltaY > 0) return;
+                if (params.zoomVal > 2 && event.deltaY < 0) return;
+                params.zoomVal += event.deltaY > 0 ? -0.01 : +0.01;
+                itemNode.style.transform = `scale(${params.zoomVal})`;
+            }
+
+            // 鼠标在图片上按下事件
+            itemNode.onmousedown = (event) => {
+                params.flag = true;
+                params.currentX = event.clientX;
+                params.currentY = event.clientY;
+                event.preventDefault();
+            }
+            // 鼠标按键释放全局事件
+            document.onmouseup = (event) => {
+                params.flag = false;
+                params.left = itemNode.offsetLeft;
+                params.top = itemNode.offsetTop;
+                event.preventDefault();
+            }
+            // 鼠标指针移动全局事件
+            document.onmousemove = (event) => {
+                if (params.flag) {
+                    let offsetX = event.clientX - params.currentX;
+                    let offsetY = event.clientY - params.currentY;
+                    itemNode.style.left = (params.left + offsetX) + "px";
+                    itemNode.style.top = (params.top + offsetY) + "px";
+                    event.preventDefault();    // 取消鼠标移动事件的默认操作
+                }
+            }
+        }
 		DragNode(document.querySelector('#cropImg'));
 	</script>
 </body>
