--- a/customization/test.html
+++ b/customization/test.html
@@ -3,6 +3,7 @@
 
 <head>
 	<link href="test.css" rel="stylesheet" type="text/css">
+	<script type="text/javascript" src="colorpicker.min.js"></script>
 </head>
 
 <body>
@@ -25,7 +26,10 @@
 		</div>
 	</div>
 	<div class="menu">
-		<input id="brush" type="button" value="Brush Color" />
+		<div class="colorpicker" style="display: flex; outline: 1px #D3D3D3 solid; height: 100px;cursor: crosshair;">
+			<div id="picker" style="min-width: 100px; margin-right: 5px;"></div>
+			<div id="slider"></div>
+		</div>
 		<input id="file" type="file" style="display: none;" />
 		<input id="load" type="button" value="Load Image" />
 		<input id="print" type="button" value="Print Image" />
@@ -127,6 +131,10 @@
 		// 打印按钮点击事件
 		document.querySelector('#print').addEventListener('click', (event) => {
 			window.print();
+		});
+		// 取色器插件
+		ColorPicker(document.querySelector('#slider'), document.querySelector('#picker'), (hex, hsv, rgb, mousePicker, mouseSlider) => {
+			document.querySelector('svg.keypadpro').style.stroke = hex;
 		});
 	</script>
 </body>
