--- a/contact/index.html
+++ b/contact/index.html
@@ -26,7 +26,70 @@
         });
     </script>
 </head>
-<body>
+<body class="style-1">
+    <div id="footer_container" class="footer_container">
+        <div class="container animated2 fadeIn" style="align-items: center; justify-content: center; text-align: center;">
+            <div class="row">
+                <div class="col-md-12" style="display:block;">
+                    <div class="row footer">
+                        <ul>
+                            <li class="footertext">Global</li>
+                            <li>|</li>
+                            <li class="footertext">Antecer</li>
+                            <li>|</li>
+                            <li class="footertext">
+                                <a onclick="toggleCountryList();">Change Country</a>
+                                <ul class="scrollmenu style-1 scrollmenu_hidden" id="scrollmenu_id">
+                                    <li onclick="changeCountryTo('au')"><img src="/flags/au.png" /><a>Australia</a></li>
+                                    <li onclick="changeCountryTo('at')"><img src="/flags/at.png" /><a>Austria</a></li>
+                                    <li onclick="changeCountryTo('be')"><img src="/flags/be.png" /><a>Belgium</a></li>
+                                    <li onclick="changeCountryTo('br')"><img src="/flags/br.png" /><a>Brazil</a></li>
+                                    <li onclick="changeCountryTo('ca')"><img src="/flags/ca.png" /><a>Canada</a></li>
+                                    <li onclick="changeCountryTo('hk')"><img src="/flags/hk.png" /><a>Hong Kong</a></li>
+                                    <li onclick="changeCountryTo('dk')"><img src="/flags/dk.png" /><a>Denmark</a></li>
+                                    <li onclick="changeCountryTo('fi')"><img src="/flags/fi.png" /><a>Finland</a></li>
+                                    <li onclick="changeCountryTo('fr')"><img src="/flags/fr.png" /><a>France</a></li>
+                                    <li onclick="changeCountryTo('gr')"><img src="/flags/gr.png" /><a>Greece</a></li>
+                                    <li onclick="changeCountryTo('hu')"><img src="/flags/hu.png" /><a>Hungary</a></li>
+                                    <li onclick="changeCountryTo('id')"><img src="/flags/id.png" /><a>Indonesia</a></li>
+                                    <li onclick="changeCountryTo('ie')"><img src="/flags/ie.png" /><a>Ireland</a></li>
+
+                                    <li onclick="changeCountryTo('il')"><img src="/flags/il.png" /><a>Israel</a></li>
+                                    <li onclick="changeCountryTo('it')"><img src="/flags/it.png" /><a>Italy</a></li>
+                                    <li onclick="changeCountryTo('jp')"><img src="/flags/jp.png" /><a>Japan</a></li>
+                                    <li onclick="changeCountryTo('kz')"><img src="/flags/kz.png" /><a>Kazakhstan</a></li>
+                                    <li onclick="changeCountryTo('kr')"><img src="/flags/kr.png" /><a>Korea</a></li>
+                                    <li onclick="changeCountryTo('lu')"><img src="/flags/lu.png" /><a>Luxembourg</a></li>
+                                    <li onclick="changeCountryTo('my')"><img src="/flags/my.png" /><a>Malaysia</a></li>
+                                    <li onclick="changeCountryTo('mx')"><img src="/flags/mx.png" /><a>Mexico</a></li>
+                                    <li onclick="changeCountryTo('nl')"><img src="/flags/nl.png" /><a>Netherlands</a></li>
+                                    <li onclick="changeCountryTo('nz')"><img src="/flags/nz.png" /><a>New Zealand</a></li>
+                                    <li onclick="changeCountryTo('no')"><img src="/flags/no.png" /><a>Norway</a></li>
+                                    <li onclick="changeCountryTo('pl')"><img src="/flags/pl.png" /><a>Poland</a></li>
+                                    <li onclick="changeCountryTo('pt')"><img src="/flags/pt.png" /><a>Portugal</a></li>
+
+                                    <li onclick="changeCountryTo('ru')"><img src="/flags/ru.png" /><a>Russia</a></li>
+                                    <li onclick="changeCountryTo('sa')"><img src="/flags/sa.png" /><a>Saudi Arabia</a></li>
+                                    <li onclick="changeCountryTo('sg')"><img src="/flags/sg.png" /><a>Singapore</a></li>
+                                    <li onclick="changeCountryTo('es')"><img src="/flags/es.png" /><a>Spain</a></li>
+                                    <li onclick="changeCountryTo('se')"><img src="/flags/se.png" /><a>Sweden</a></li>
+                                    <li onclick="changeCountryTo('ch')"><img src="/flags/ch.png" /><a>Switzerland</a></li>
+                                    <li onclick="changeCountryTo('th')"><img src="/flags/th.png" /><a>Thailand</a></li>
+                                    <li onclick="changeCountryTo('tr')"><img src="/flags/tr.png" /><a>Turkey</a></li>
+                                    <li onclick="changeCountryTo('ua')"><img src="/flags/ua.png" /><a>Ukraine</a></li>
+                                    <li onclick="changeCountryTo('gb')"><img src="/flags/gb.png" /><a>United Kingdom</a></li>
+                                    <li onclick="changeCountryTo('us')"><img src="/flags/us.png" /><a>United States</a></li>
+                                    <li onclick="changeCountryTo('vn')"><img src="/flags/vn.png" /><a>Vietnam</a></li>
+
+                                    <li onclick="changeCountryTo('gl')" class="last"><img src="/flags/gl.png" /><a>Global</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <nav id="navbar" class="navigation navbar navbar-inverse navbar-fixed-top animated fadeInDown stickyfirst" role="navigation">
         <div class="container" style="margin-top: 5px;">
             <div class="navbar-header left">
