Bug fix product page

--- a/products/2-key-amusing-keypad/index.html
+++ b/products/2-key-amusing-keypad/index.html
@@ -50,7 +50,7 @@
         <div class="container animated2 fadeIn" style="align-items: center; justify-content: center; text-align: center;">
             <div class="row">
                 <div class="col-md-12" style="display:block;">
-                    <div class="row footer">
+                    <div class="row footer footer_container_scroll_product">
                         <ul>
                             <li class="footertext">Global</li>
                             <li>|</li>
@@ -58,7 +58,7 @@
                             <li>|</li>
                             <li class="footertext">
                                 <a onclick="toggleCountryList();">Change Country</a>
-                                <ul class="scrollmenu style-1 scrollmenu_hidden" id="scrollmenu_id">
+                                <ul class="scrollmenu style-1 scrollmenu_hidden scrollmenu_scroll_product" id="scrollmenu_id">
                                     <li onclick="changeCountryTo('au')"><img src="../../flags/au.png" /><a>Australia</a></li>
                                     <li onclick="changeCountryTo('at')"><img src="../../flags/at.png" /><a>Austria</a></li>
                                     <li onclick="changeCountryTo('be')"><img src="../../flags/be.png" /><a>Belgium</a></li>
