--- a/products/2-key-amusing-keypad/checkout/index.html
+++ b/products/2-key-amusing-keypad/checkout/index.html
@@ -37,7 +37,7 @@
                     <b>Antecer</b>
                 </a>
                 <div style="margin-top: 17px; white-space: nowrap;">
-                    <img id="flag" style="height: 20px;" />
+                    <img id="flag" style="height: 20px;"  onclick="toggleCountryList();"/>
                     <span class="hovertext">Change country</span>
                 </div>
             </div>
@@ -62,7 +62,7 @@
             </a>
 
             <div style="margin-top: 17px; white-space: nowrap;">
-                <img id="flag2" style="height: 20px;" />
+                <img id="flag2" style="height: 20px;"  onclick="toggleCountryList();" />
                 <span class="hovertext2">Change country</span>
             </div>
         </div>
